fix select2 contrast

--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,11 @@
 .select2-selection__choice {
     @apply badge badge-info gap-2;
 }
+
+.select2-results__option--highlighted {
+    @apply bg-base-300
+}
+
+.select2-results__option--selected {
+    @apply bg-base-100
+}
